--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,10 @@
 *.js text
 *.css text
 
+# Explicitely set CRLF for tablepress.php and readme.txt to make them easily readable for Windows users
+tablepress.php text eol=crlf
+readme.txt text eol=crlf
+
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
