--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"grunt": "~0.4.1",
 		"grunt-contrib-cssmin": "~0.6.1",
 		"grunt-contrib-uglify": "~0.2.2",
+		"grunt-contrib-csslint": "~0.1.2",
 		"grunt-contrib-jshint": "~0.6.2",
 		"grunt-contrib-watch": "~0.5.1"
 	}
