--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"grunt-contrib-uglify": "~0.2.2",
 		"grunt-contrib-csslint": "~0.1.2",
 		"grunt-contrib-jshint": "~0.6.3",
-		"grunt-contrib-watch": "~0.5.2"
+		"grunt-contrib-watch": "~0.5.2",
+		"matchdep": "~0.1.2"
 	}
 }
