--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"grunt-contrib-csslint": "~0.2.0",
 		"grunt-contrib-jshint": "~0.8.0",
 		"grunt-contrib-watch": "~0.5.3",
+		"grunt-jsvalidate": "~0.2.2",
 		"matchdep": "~0.3.0"
 	},
 	"jshintConfig": {
