--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"grunt-contrib-watch": "~0.5.3",
 		"grunt-jsvalidate": "~0.2.2",
 		"grunt-jsonlint": "~1.0.4",
+		"grunt-autoprefixer": "~0.6.5",
 		"matchdep": "~0.3.0"
 	},
 	"jshintConfig": {
