--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+# Travis CI Configuration File
+
 language: php
 
 php:
@@ -12,8 +14,21 @@ env:
   - WP_VERSION=3.8.1 WP_MULTISITE=0
   - WP_VERSION=3.8.1 WP_MULTISITE=1
 
+# Clone WordPress and configure the testing environment.
 before_script:
-  - export WP_TESTS_DIR=/tmp/wordpress-tests/
-  - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+  - export WP_DEVELOP_DIR=/tmp/wordpress
+  - export WP_TESTS_DIR=$WP_DEVELOP_DIR/tests/phpunit/
+  - export PLUGIN_SLUG=$(basename $(pwd))
+  - git clone git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
+  - cd ..
+  - mv $PLUGIN_SLUG "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG"
+  - cd $WP_DEVELOP_DIR
+  - git checkout $WP_VERSION
+  - mysql -e "CREATE DATABASE wordpress_tests;" -uroot
+  - cp wp-tests-config-sample.php wp-tests-config.php
+  - sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
+  - sed -i "s/yourusernamehere/travis/" wp-tests-config.php
+  - sed -i "s/yourpasswordhere//" wp-tests-config.php
+  - cd "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG"
 
 script: phpunit
