--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,10 @@ before_script:
   - export WP_DEVELOP_DIR=/tmp/wordpress
   - export WP_TESTS_DIR=$WP_DEVELOP_DIR/tests/phpunit/
   - export PLUGIN_SLUG=$(basename $(pwd))
+  - export PLUGIN_SLUG_LC=${PLUGIN_SLUG_LC,,}
   - git clone git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
   - cd ..
-  - mv $PLUGIN_SLUG "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG"
+  - mv $PLUGIN_SLUG "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG_LC"
   - cd $WP_DEVELOP_DIR
   - git checkout $WP_VERSION
   - mysql -e "CREATE DATABASE wordpress_tests;" -uroot
