--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - export WP_DEVELOP_DIR=/tmp/wordpress
   - export WP_TESTS_DIR=$WP_DEVELOP_DIR/tests/phpunit/
   - export PLUGIN_SLUG=$(basename $(pwd))
-  - export PLUGIN_SLUG_LC=${PLUGIN_SLUG_LC,,}
+  - export PLUGIN_SLUG_LC=${PLUGIN_SLUG,,}
   - git clone git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
   - cd ..
   - mv $PLUGIN_SLUG "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG_LC"
