Switch to the lowercase folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ before_script:
   - sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
   - sed -i "s/yourusernamehere/travis/" wp-tests-config.php
   - sed -i "s/yourpasswordhere//" wp-tests-config.php
-  - cd "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG"
+  - cd "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG_LC"
 
 script: phpunit
