--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ env:
   - WP_VERSION=master WP_MULTISITE=1
   - WP_VERSION=3.9.0 WP_MULTISITE=0
   - WP_VERSION=3.9.0 WP_MULTISITE=1
+  - WP_VERSION=3.8.3 WP_MULTISITE=0
+  - WP_VERSION=3.8.3 WP_MULTISITE=1
 
 # Clone WordPress and configure the testing environment.
 before_script:
