--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,14 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - hhvm
+  - nightly
 
 env:
   - WP_VERSION=master WP_MULTISITE=0
   - WP_VERSION=master WP_MULTISITE=1
-  - WP_VERSION=4.0.1 WP_MULTISITE=0
-  - WP_VERSION=4.0.1 WP_MULTISITE=1
+  - WP_VERSION=4.2.0 WP_MULTISITE=0
+  - WP_VERSION=4.2.0 WP_MULTISITE=1
 
 # Clone WordPress and configure the testing environment.
 before_script:
