Use https protocol for all URLs to tablepress.org and tobias.baethge.com.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     {
       "name": "Tobias Bäthge",
       "email": "wordpress@tobias.baethge.com",
-      "homepage": "http://tobias.baethge.com/"
+      "homepage": "https://tobias.baethge.com/"
     }
   ],
   "type": "wordpress-plugin",
