--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tobias Bäthge",
   "license": "GPLv2",
   "devDependencies": {
+    "autoprefixer": "~6.0.3",
     "grunt": "~0.4.5",
     "grunt-contrib-cssmin": "~0.14.0",
     "grunt-contrib-uglify": "~0.10.0",
@@ -16,8 +17,8 @@
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-jsvalidate": "~0.2.2",
+    "grunt-postcss": "~0.7.0",
     "grunt-jsonlint": "~1.0.4",
-    "grunt-autoprefixer": "~3.0.0",
     "matchdep": "~1.0.0"
   },
   "jshintConfig": {
