--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expr": true,
     "immed": true,
     "noarg": true,
+    "nonbsp": true,
     "onevar": true,
     "quotmark": "single",
     "trailing": true,
