--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ php:
 env:
   - WP_VERSION=master WP_MULTISITE=0
   - WP_VERSION=master WP_MULTISITE=1
+  - WP_VERSION=4.4.0 WP_MULTISITE=0
+  - WP_VERSION=4.4.0 WP_MULTISITE=1
   - WP_VERSION=4.3.1 WP_MULTISITE=0
   - WP_VERSION=4.3.1 WP_MULTISITE=1
 
