--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ php:
 env:
   - WP_VERSION=master WP_MULTISITE=0
   - WP_VERSION=master WP_MULTISITE=1
+  - WP_VERSION=4.7.0 WP_MULTISITE=0
+  - WP_VERSION=4.7.0 WP_MULTISITE=1
   - WP_VERSION=4.6.1 WP_MULTISITE=0
   - WP_VERSION=4.6.1 WP_MULTISITE=1
   - WP_VERSION=4.5.4 WP_MULTISITE=0
