Prepare TablePress 1.8-beta1.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "tobiasbg/tablepress",
-  "version": "1.7.0",
+  "version": "1.8.0-beta1",
   "description": "TablePress plugin for WordPress",
   "keywords": ["wordpress", "plugin", "table"],
   "homepage": "https://tablepress.org/",
