--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TablePress",
-  "version": "1.8.0-beta1",
+  "version": "1.8.0",
   "description": "TablePress enables you to create and manage tables, without having to write HTML code, and it adds valuable functions for your visitors.",
   "repository": {
     "type": "git",
