--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,4 +1,4 @@
-<phpunit bootstrap="tests/bootstrap.php" backupGlobals="false" colors="true">
+<phpunit bootstrap="tests/bootstrap.php" backupGlobals="false" colors="true" beStrictAboutTestsThatDoNotTestAnything="true">
 	<testsuites>
 		<!-- Default test suite to run all tests -->
 		<testsuite>
