--- a/.travis.yml
+++ b/.travis.yml
@@ -17,33 +17,35 @@ env:
   - WP_VERSION=4.8.2
   - WP_VERSION=4.7.6
 
-before_install:
-  - phpenv config-rm xdebug.ini
-
 # Clone WordPress and configure the testing environment.
 before_script:
-  - mysql --version
-  - phpenv versions
-  - php --version
-  - php -m
-  - which phpunit
-  - phpunit --version
-  - git --version
-  - locale -a
-  - export WP_DEVELOP_DIR=/tmp/wordpress
-  - export WP_TESTS_DIR=$WP_DEVELOP_DIR/tests/phpunit/
-  - export PLUGIN_SLUG=$(basename $(pwd))
-  - export PLUGIN_SLUG_LC=${PLUGIN_SLUG,,}
-  - git clone --depth=50 --branch="$WP_VERSION" git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
-  - cd ..
-  - mv "$PLUGIN_SLUG" "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG_LC"
-  - cd $WP_DEVELOP_DIR
-  - mysql -e "CREATE DATABASE wordpress_tests;" -uroot
-  - cp wp-tests-config-sample.php wp-tests-config.php
-  - sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
-  - sed -i "s/yourusernamehere/travis/" wp-tests-config.php
-  - sed -i "s/yourpasswordhere//" wp-tests-config.php
-  - cd "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG_LC"
+- |
+  # Remove Xdebug for a huge performance increase:
+  if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
+    phpenv config-rm xdebug.ini
+  fi
+- mysql --version
+- phpenv versions
+- php --version
+- php -m
+- which phpunit
+- phpunit --version
+- git --version
+- locale -a
+- export WP_DEVELOP_DIR=/tmp/wordpress
+- export WP_TESTS_DIR=$WP_DEVELOP_DIR/tests/phpunit/
+- export PLUGIN_SLUG=$(basename $(pwd))
+- export PLUGIN_SLUG_LC=${PLUGIN_SLUG,,}
+- git clone --depth=50 --branch="$WP_VERSION" git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
+- cd ..
+- mv "$PLUGIN_SLUG" "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG_LC"
+- cd $WP_DEVELOP_DIR
+- mysql -e "CREATE DATABASE wordpress_tests;" -uroot
+- cp wp-tests-config-sample.php wp-tests-config.php
+- sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
+- sed -i "s/yourusernamehere/travis/" wp-tests-config.php
+- sed -i "s/yourpasswordhere//" wp-tests-config.php
+- cd "$WP_DEVELOP_DIR/src/wp-content/plugins/$PLUGIN_SLUG_LC"
 
 script:
   - bash tests/run-tests.sh
