--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ dist: trusty
 language: php
 
 env:
-  - WP_VERSION=master
-  - WP_VERSION=4.8.2
-  - WP_VERSION=4.7.6
+  global:
+    - WP_VERSION=master
+    - WP_VERSION=4.8.2
+    - WP_VERSION=4.7.6
 
 matrix:
   include:
