--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 patreon: TobiasBg
-custom: [ "https://www.paypal.me/TobiasBg", "https://venmo.com/TobiasBg", "https://www.amazon.com/registry/wishlist/3CSH3SBZS62NO", "https://tablepress.org/donate/" ]
+custom: [ "https://paypal.me/TobiasBg", "https://venmo.com/TobiasBg", "https://amazon.com/wishlist/3CSH3SBZS62NO", "https://tablepress.org/donate/" ]
