--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ php:
 
 env:
   - WP_VERSION=master
+  - WP_VERSION=5.7
+  - WP_VERSION=5.6
   - WP_VERSION=5.5
   - WP_VERSION=5.4
   - WP_VERSION=5.3
