--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,23 @@
-# Set images and text to desired line ends
+# Configure git attributes, like line endings and file types.
+
+# Exclude these folders and files from release archives.
+/.git/ export-ignore
+/.github/ export-ignore
+/node_modules/ export-ignore
+/tests/ export-ignore
+/vendor/ export-ignore
+/.editorconfig export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/.travis.yml export-ignore
+/composer.json export-ignore
+/composer.lock export-ignore
+/Gruntfile.js export-ignore
+/package.json export-ignore
+/phpcompat.xml.dist export-ignore
+/phpcs.xml.dist export-ignore
+/phpunit.xml.dist export-ignore
+/readme.md export-ignore
 
 # Set default behaviour, in case users don't have core.autocrlf set.
 * text=auto
@@ -14,12 +33,14 @@
 *.xml.dist text
 
 # Explicitly set CRLF for tablepress.php, *.txt files, and DataTables *.json files
-# to make them easily readable and editable for Windows users
-tablepress.php text eol=crlf
+# to make them easily readable and editable for Windows users.
+/tablepress.php text eol=crlf
 *.txt text eol=crlf
-i18n/datatables/*.json text eol=crlf
+/i18n/datatables/*.json text eol=crlf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
 *.gif binary
+*.woff binary
+*.woff2 binary
