GitHub Actions: Run workflows weekly (every Sunday, at 3:45am, chosen to hopefully be a time with sufficient GitHub resources being available). This allows finding problems e.g. caused by updated versions of PHP or newly added code style checks in the WP Coding Standards, without needing a triggering change in the TablePress code.

--- a/.github/workflows/phpunit-tests.yml
+++ b/.github/workflows/phpunit-tests.yml
@@ -24,6 +24,8 @@ on:
       - 'phpunit.xml.dist'
       # Changes to workflow files should always verify all workflows are successful.
       - '.github/workflows/*.yml'
+  schedule:
+    - cron: '45 3 * * SUN'
   workflow_dispatch:
 
 # Cancels all previous workflow runs for pull requests that have not completed.
