--- a/.github/workflows/php-compatibility.yml
+++ b/.github/workflows/php-compatibility.yml
@@ -53,6 +53,7 @@ jobs:
   # - Make Composer packages available globally.
   # - Logs PHP_CodeSniffer debug information.
   # - Runs the PHP compatibility tests.
+  # - Ensures version-controlled files are not modified or deleted.
   php-compatibility:
     name: Check PHP compatibility
     runs-on: ubuntu-latest
@@ -86,3 +87,6 @@ jobs:
 
       - name: Run PHP compatibility tests
         run: phpcs --standard=phpcompat.xml.dist -q --report=checkstyle | cs2pr
+
+      - name: Ensure version-controlled files are not modified during the tests
+        run: git diff --exit-code
