--- a/.github/workflows/phpunit-tests.yml
+++ b/.github/workflows/phpunit-tests.yml
@@ -10,6 +10,8 @@ on:
     paths:
       # Any change to a PHP file should run checks.
       - '**.php'
+      # These files configure Composer. Changes could affect the outcome.
+      - 'composer.*'
       # This file configures PHPUnit. Changes could affect the outcome.
       - 'phpunit.xml.dist'
       # Changes to workflow files should always verify all workflows are successful.
@@ -20,6 +22,8 @@ on:
     paths:
       # Any change to a PHP file should run checks.
       - '**.php'
+      # These files configure Composer. Changes could affect the outcome.
+      - 'composer.*'
       # This file configures PHPUnit. Changes could affect the outcome.
       - 'phpunit.xml.dist'
       # Changes to workflow files should always verify all workflows are successful.
@@ -39,7 +43,7 @@ jobs:
   # Runs the PHPUnit tests for TablePress.
   phpunit:
     name: WP ${{ matrix.wp }}${{ matrix.multisite && ' multisite' || '' }}, PHP ${{ matrix.php }}
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     services:
       mariadb:
         image: mariadb:latest
@@ -64,8 +68,14 @@ jobs:
           - '7.1'
           - '7.0'
           - '5.6'
-        os: [ ubuntu-latest ]
         multisite: [ false, true ]
+        include:
+          - wp: master
+            php: '8.2'
+          - wp: master
+            php: '8.1'
+          - wp: master
+            php: '8.0'
     env:
       WP_VERSION: ${{ matrix.wp }}
       WP_DEVELOP_DIR: /tmp/wordpress
@@ -82,28 +92,14 @@ jobs:
           tools: composer
           extensions: mysql
 
-      - name: Install PHPUnit depending on the PHP version
-        run: |
-          if [[ 1 == 1 ]]; then
-            case "${{ matrix.php }}" in
-              7.4|7.3|7.2|7.1)
-                echo "Using PHPUnit 7.x for PHP ${{ matrix.php }}"
-                composer require "phpunit/phpunit:^7"
-                ;;
-              7.0)
-                echo "Using PHPUnit 6.x for PHP ${{ matrix.php }}"
-                composer require "phpunit/phpunit:^6"
-                ;;
-              5.6)
-                echo "Using PHPUnit 5.x for PHP ${{ matrix.php }}"
-                composer require "phpunit/phpunit:^5"
-                ;;
-              *)
-                echo "No PHPUnit version handling for PHP ${{ matrix.php }}"
-                exit 1
-                ;;
-            esac
-          fi
+      - name: Manually install PHPUnit when running WP <= 5.8, depending on the PHP version
+        if: ${{ matrix.wp != 'master' }}
+        run: composer require --dev "phpunit/phpunit:^5.7.21 || ^6.5 || ^7.5" --no-install
+
+      - name: Install Composer dependencies
+        uses: ramsey/composer-install@v1
+        with:
+          composer-options: ${{ ( matrix.php == '8.1' || matrix.php == '8.2' ) && '--ignore-platform-reqs' || '' }}
 
       - name: Make Composer packages available globally
         run: echo "${PWD}/vendor/bin" >> $GITHUB_PATH
@@ -111,11 +107,11 @@ jobs:
       - name: Log debug information
         run: |
           php --version
-          phpunit --version
+          composer --version
           git --version
 
       - name: Clone the WordPress development repository
-        run: git clone --depth=50 --branch="$WP_VERSION" git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
+        run: git clone --depth=1 --branch="$WP_VERSION" git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
 
       - name: Setup WordPress unit tests
         run: |
@@ -142,5 +138,6 @@ jobs:
         working-directory: ${{ env.PLUGIN_DIR }}
         run: phpunit --exclude-group=ms-${{ matrix.multisite && 'excluded' || 'required' }}
 
-      - name: Ensure version-controlled files, except for Composer files (due to installing PHPUnit), are not modified during the tests
-        run: git diff --exit-code -- . ':!composer.json' ':!composer.lock'
+      # composer.json will have been modified on WP <= 5.8, where PHPUnit is installed.
+      - name: Ensure version-controlled files are not modified or deleted
+        run: git diff --exit-code${{ matrix.wp != 'master' && ' -- . ":!composer.json"' || '' }}
