--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,12 @@
 		"source": "https://github.com/TobiasBg/TablePress"
 	},
 	"require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "~0.7.0",
+		"dealerdirect/phpcodesniffer-composer-installer": "~0.7.1",
 		"wp-coding-standards/wpcs": "~2.3.0",
-		"phpcompatibility/phpcompatibility-wp": "~2.1.0"
+		"phpcompatibility/phpcompatibility-wp": "~2.1.2",
+		"yoast/phpunit-polyfills": "~1.0.1"
 	},
- 	"scripts": {
+	"scripts": {
 		"compat": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --standard=phpcompat.xml.dist --report=summary,source",
 		"phpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --report=summary,source",
 		"phpcs:errors": "@phpcs -n",
