--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
 		"php": ">=5.6.20"
 	},
 	"require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.7.2",
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
 		"wp-coding-standards/wpcs": "dev-develop",
 		"phpcompatibility/phpcompatibility-wp": "^2.1.4",
 		"php-censor/phpdoc-checker": "^1.0.3 || ^2.1.0 || ^3.1.0",
@@ -56,8 +56,10 @@
 	},
 	"config": {
 		"allow-plugins": {
+			"dangoodman/composer-for-wordpress": true,
 			"dealerdirect/phpcodesniffer-composer-installer": true
-		}
+		},
+		"classloader-suffix": "TablePress"
 	},
 	"scripts": {
 		"compat": [
@@ -77,8 +79,10 @@
 		"spaces-to-tabs": "find . -type f -not -path './node_modules/*' -not -path './vendor/*' \\( -name \\*.php -o -name \\*.js -o -name \\*.scss -o -name \\*.css \\) -exec bash -c 'perl -pi -e \"s/(^|\\G) {4}/\t/g\" \"$0\"' {} \\;",
 		"release": [
 			"rm -rf ./composer.lock ./libraries/composer ./libraries/vendor ./libraries/autoload.php ./vendor",
+			"composer clear-cache",
 			"composer config platform.php 7.2",
 			"composer require \"phpoffice/phpspreadsheet:dev-tablepress as 1.25.2\" --no-update",
+			"composer require \"dangoodman/composer-for-wordpress:^2.0.2\" --no-update",
 			"composer update --no-dev",
 			"docker run --rm -it -v ${PWD}:/project/ coenjacobs/mozart /mozart/bin/mozart compose",
 			"composer dump-autoload --optimize --classmap-authoritative",
