--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tablepress/tablepress",
-	"version": "2.0.2",
+	"version": "2.0.3",
 	"description": "Embed beautiful and feature-rich tables into your posts and pages, without having to write code.",
 	"author": "Tobias Bäthge",
 	"license": "GPL-2.0-only",
@@ -15,7 +15,7 @@
 	"repository": "github:TablePress/TablePress",
 	"bugs": "https://github.com/TablePress/TablePress/issues",
 	"devDependencies": {
-		"@wordpress/scripts": "^25.0.0",
+		"@wordpress/scripts": "^25.1.0",
 		"autoprefixer": "^9.8.8",
 		"grunt": "^1.5.3",
 		"grunt-contrib-csslint": "^2.0.0",
@@ -29,10 +29,10 @@
 		"grunt": "grunt",
 		"prebuild": "grunt lint && wp-scripts lint-js && wp-scripts lint-style",
 		"build": "wp-scripts build",
-		"postbuild": "find ./admin/css/build/ ./css/build/ -type f -name \"*.css\" -exec sed -i '' 's||\\\\f053|g;s||\\\\f054|g;s||\\\\f0dc|g;s||\\\\f0d8|g;s||\\\\f0d7|g;s|●|\\\\25cf|g;s|✓|\\\\2713|g' {} +",
+		"postbuild": "find ./admin/css/build/ ./css/build/ ./modules/admin/css/build/ ./modules/css/build/ -type f -name \"*.css\" -exec sed -i '' 's||\\\\f053|g;s||\\\\f054|g;s||\\\\f0dc|g;s||\\\\f0d8|g;s||\\\\f0d7|g;s|●|\\\\25cf|g;s|✓|\\\\2713|g' {} +",
 		"build:block": "wp-scripts build --config-name tablepress-block",
-		"build:css": "wp-scripts build --config-name tablepress-admin-css && wp-scripts build --config-name tablepress-frontend-css",
-		"build:js": "wp-scripts build --config-name tablepress-admin-js",
+		"build:css": "wp-scripts build --config-name tablepress-admin-css && wp-scripts build --config-name tablepress-frontend-css && wp-scripts build --config-name tablepress-modules-css && wp-scripts build --config-name tablepress-frontend-modules-css",
+		"build:js": "wp-scripts build --config-name tablepress-admin-js && wp-scripts build --config-name tablepress-modules-js",
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
