--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -1,8 +1,8 @@
 name: Coding Standards
 
-permissions:
-  contents: read
-  checks: write
+# Disable permissions for all available scopes by default.
+# Any needed permissions should be configured at the job level.
+permissions: {}
 
 on:
   push:
@@ -57,6 +57,8 @@ jobs:
   phpcs:
     name: PHP coding standards
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - name: Set up PHP
@@ -90,9 +92,9 @@ jobs:
 
   failed-workflow:
     name: Failed workflow tasks
+    runs-on: ubuntu-latest
     permissions:
       actions: write
-    runs-on: ubuntu-latest
     needs: [ phpcs ]
     if: |
       always() &&
