--- a/.github/workflows/php-compatibility.yml
+++ b/.github/workflows/php-compatibility.yml
@@ -1,8 +1,8 @@
 name: PHP Compatibility
 
-permissions:
-  contents: read
-  checks: write
+# Disable permissions for all available scopes by default.
+# Any needed permissions should be configured at the job level.
+permissions: {}
 
 on:
   push:
@@ -62,6 +62,8 @@ jobs:
   php-compatibility:
     name: Check PHP compatibility
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - name: Set up PHP
@@ -107,9 +109,9 @@ jobs:
 
   failed-workflow:
     name: Failed workflow tasks
+    runs-on: ubuntu-latest
     permissions:
       actions: write
-    runs-on: ubuntu-latest
     needs: [ php-compatibility ]
     if: |
       always() &&
