--- a/.github/workflows/phpunit-tests.yml
+++ b/.github/workflows/phpunit-tests.yml
@@ -1,7 +1,8 @@
 name: PHPUnit Tests
 
-permissions:
-  contents: read
+# Disable permissions for all available scopes by default.
+# Any needed permissions should be configured at the job level.
+permissions: {}
 
 on:
   push:
@@ -57,6 +58,8 @@ jobs:
   phpunit:
     name: WP ${{ matrix.wp }}${{ matrix.multisite && ' multisite' || '' }}, PHP ${{ matrix.php }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     services:
       mariadb:
         image: mariadb:latest
@@ -160,9 +163,9 @@ jobs:
 
   failed-workflow:
     name: Failed workflow tasks
+    runs-on: ubuntu-latest
     permissions:
       actions: write
-    runs-on: ubuntu-latest
     needs: [ phpunit ]
     if: |
       always() &&
