--- a/.github/workflows/phpunit-tests.yml
+++ b/.github/workflows/phpunit-tests.yml
@@ -74,6 +74,7 @@ jobs:
       matrix:
         wp:
           - trunk
+          - '6.3'
           - '6.2'
           - '6.1'
           - '6.0'
@@ -98,6 +99,11 @@ jobs:
             php: '8.1'
           - wp: '5.8'
             php: '8.0'
+          # WordPress 6.3+ does no longer support PHP 5.6.
+          - wp: 'trunk'
+            php: '5.6'
+          - wp: '6.3'
+            php: '5.6'
     env:
       PLUGIN_DIR: ./src/wp-content/plugins/tablepress
 
