--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 /.git/ export-ignore
 /.github/ export-ignore
 /.phpstan/ export-ignore
+/.wordpress-org/ export-ignore
 /node_modules/ export-ignore
 /tests/ export-ignore
 /vendor/ export-ignore
@@ -13,20 +14,23 @@
 /.eslintrc.js export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.phpunit.result.cache export-ignore
 /.prettierignore export-ignore
 /.prettierrc.js export-ignore
 /.stylelintignore export-ignore
 /.stylelintrc.json export-ignore
+/.typos.toml export-ignore
 /composer.json export-ignore
 /composer.lock export-ignore
 /Gruntfile.js export-ignore
-/package.json export-ignore
 /package-lock.json export-ignore
+/package.json export-ignore
 /phpcompat.xml.dist export-ignore
 /phpcs.xml.dist export-ignore
 /phpstan.neon.dist export-ignore
 /phpunit.xml.dist export-ignore
 /readme.md export-ignore
+/rector.php export-ignore
 /webpack.config.js export-ignore
 
 # Set default behaviour, in case users don't have core.autocrlf set.
