--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
 		"php-parallel-lint": "vendor/bin/parallel-lint --exclude .git --exclude node_modules --exclude vendor --show-deprecated .",
 		"phpstan": "vendor/bin/phpstan analyze --memory-limit 2G",
 		"typos": "typos",
+		"update-version": "php update-version.php",
 		"build": [
 			"@compat",
 			"@phpcs:full",
