--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tablepress/tablepress",
-	"version": "3.2.1",
+	"version": "3.2.2",
 	"description": "Embed beautiful and feature-rich tables into your posts and pages, without having to write code.",
 	"author": "Tobias Bäthge",
 	"license": "GPL-2.0-only",
@@ -15,11 +15,12 @@
 	"repository": "github:TablePress/TablePress",
 	"bugs": "https://github.com/TablePress/TablePress/issues",
 	"devDependencies": {
-		"@wordpress/icons": "^10.29.0",
-		"@wordpress/scripts": "^30.22.0",
+		"@wordpress/icons": "^10.31.0",
+		"@wordpress/scripts": "^30.24.0",
 		"grunt": "^1.6.1",
 		"grunt-contrib-jshint": "^3.2.0",
 		"grunt-jsonlint": "^3.0.0",
+		"clean-webpack-plugin": "^3.0",
 		"webpack-remove-empty-scripts": "^1.1.1"
 	},
 	"scripts": {
