--- a/.typos.toml
+++ b/.typos.toml
@@ -15,3 +15,4 @@ extend-exclude = [
 [default.extend-words]
 BA = "BA"
 pn = "pn"
+wrkbook = "wrkbook" # This seems to be a fixed term in the old .xls file format.
